# racecar-cli-game

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  CPUHandleCar.cpp  CPUHandleCar.h  CPUSpeedCar.cpp  CPUSpeedCar.h  README.md  RaceCars.cpp  RaceCars.h  Racetrack.cpp  Racetrack.h  UserCar.cpp  UserCar.h  main.cpp
.cache/clangd/index/: Application.cpp.89F93C5DC026FA50.idx  Application.h.F7ADBB17561369A1.idx  CPUHandleCar.cpp.A2009D2A6D4C0AE4.idx  CPUHandleCar.h.882162A6DB44B0A8.idx  CPUSpeedCar.cpp.7D8E2CCE6A0C7579.idx  CPUSpeedCar.h.8B11930B4095826B.idx  RaceCars.cpp.D9BEDE39C379A0F9.idx  RaceCars.h.134043AAF4239024.idx  Racetrack.cpp.C03C3256D4E78A3C.idx  Racetrack.h.1CE8378CF0E6C3BD.idx  UserCar.cpp.C8BAB552B2E36176.idx  UserCar.h.6FC55466B7B6B059.idx  main.cpp.10735EB6422BE541.idx
Debug/: CMakeCache.txt  Course_Project  Makefile  cmake_install.cmake  compile_commands.json
Debug/.cmake/api/v1/reply/: codemodel-v2-7ac87322ae88b17a698a.json  index-2023-04-06T18-48-09-0976.json  target-Course_Project-Debug-11dc5c152912c756a898.json
tracks/: track4.txt
